src/scss/layout.scss
/* Layout Styles */

@import '_partials/colors';
@import '_partials/fonts';
@import '_partials/base';
@import '_partials/theme.color';
@import '_partials/navbar';
@import '_partials/toolbar';
@import '_partials/messages-toolbar';
@import '_partials/panel';
@import '_partials/modal';
@import '_partials/popup';
@import '_partials/form';
@import '_partials/text-input';
@import '_partials/tag-input';
@import '_partials/date-input';
@import '_partials/location-input';
@import '_partials/input-checkbox';
@import '_partials/text-radios';
@import '_partials/text-checkboxes';
@import '_partials/button';
@import '_partials/full-width-button';
@import '_partials/chip';
@import '_partials/small-chip';
@import '_partials/chip-list';
@import '_partials/small-chip-list';
@import '_partials/progress-bar';
@import '_partials/card';
@import '_partials/user';
@import '_partials/profile-avatars-connection';
@import '_partials/notifications';
@import '_partials/daily-messages';
@import '_partials/social-wheels';

* {
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
}

body {
	-webkit-touch-callout: none; /* prevent callout to copy image, etc when tap to hold */
	-webkit-text-size-adjust: none; /* prevent webkit from resizing text to fit */
	-webkit-user-select: none; /* prevent copy paste, to allow, change 'none' to 'text' */

	background: $dark-gray;
	font-family: $nekuno-font;
	font-size: 10px;
	margin: auto;
	max-width: 480px;
	min-width: 320px;
	overflow-y: visible;
	width: 100%;

	a {
		cursor: pointer;
		font-size: 1em;
	}
	#root {
		height: 100%;

		.App {
			font-size: 1.4em;
			height: 100%;

			.view {
				background: $dark-purple;
				color: #fff;
				overflow-y: visible;
				.title {
					font-size: 1.785714286em;
					text-align: center;
				}

				.content-block {
					color: #fff;
				}

				.bold {
					font-weight: bold;
				}

				.icon-wrapper {
					cursor: pointer;
				}

				.page {
					background: $dark-purple;
					height: auto;

					#page-content {
						margin: 50px auto 0 auto;
						width: 85%;

						.sub-title {
							font-size: 1.214285714em;
							text-align: center;
						}

						.excerpt {
							margin-top: 10px;
							text-align: center;
						}

						.list-block .item-content {
							font-size: 0.823529412em;
							padding-left: 0;
						}
					}
				}

				.icon-wrapper, .small-icon-wrapper {
					background-color: $deep-purple;
					border-radius: 50%;
					display: inline-block;
					height: 35px;
					text-align: center;
					width: 35px;

					span {
						color: #fff;
						font-size: 1em;
						line-height: 35px;
					}

					&:last-of-type {
						margin-left: 15px;
					}
				}

				.small-icon-wrapper {
					height: 22px;
					width: 22px;

					span {
						font-size: 0.8em;
						line-height: 22px;
					}
					&:last-of-type {
						margin-left: 0;
					}
				}

				.inline-icons-wrapper {
					min-width: 85px;
				}

				.loading-gif {
					background: url('img/loading.gif') no-repeat;
					background-size: 100px 100px;
					height: 100px;
					margin: -25px auto auto auto;
					width: 100px;
				}
			}
		}
	}
}

